[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/TouchInput.gd" type="Script" id=1]
[ext_resource path="res://assets/temp/arrow.png" type="Texture" id=2]

[node name="TouchInput" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.804246
anchor_right = 1.0
anchor_bottom = 0.999558
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 915.72
margin_right = 442.0
margin_bottom = 1007.72
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="."]
margin_left = 250.0
margin_top = 916.417
margin_right = 342.0
margin_bottom = 1008.42
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpButton" type="TextureButton" parent="."]
margin_left = 250.0
margin_top = 924.742
margin_right = 350.0
margin_bottom = 1024.74
rect_rotation = -90.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_up" from="RightButton" to="." method="_on_RightButton_button_up"]
[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="JumpButton" to="." method="_on_JumpButton_button_down"]
